2002-11-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* graphics.c (do_plot): Get rid of old xtic and ytic #defines.
	(setup_tics): For series tics on log axes, logarithmize tic step
 	for use by endpoint fixups.
	(gen_tics): Rewrite handling of series tics on log axes.  Handle
 	un-specified ticking endpoints.  Handle both negative values and
 	negative exponents of the stepsize correctly, and also negative
 	user-specified endpoints.

2002-11-09  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/svg.trm (SVG_init): Backports from 3.8 branch: adds the
 	viewBox attribute to the <svg> tag, and replaces the original SVG
 	terminal author's name by the gnuplot version in the <desc>.

2002-11-09  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* makefile.dj2, makefile.tc: Update CFLAGS.

	* plot2d.c, plot3d.c: Convert INIT_ARRAYS() macros to functions to
	fix build for 16-bit Windows.

	* specfun.c: Add missing preprocessor symbols to fix build under
	DJGPP V2.

2002-11-05  Shigeharu TAKENO  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: Fix more misprints.

2002-11-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* fit.c (regress): Fix SF bug # 631323: spelling "occured" -->
 	"occurred".

2002-10-25  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* Makefile.in: Add stamp-h[0-9]* to distclean target.

2002-10-18  Shigeharu TAKENO  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc, term/atariaes.trm, term/atarivdi.trm, term/be.trm,
	term/x11.trm: Fix a number of misprints.

2002-10-18  Don Taber  <dtaber@blackrat.risc.rockwell.com>

	* term/linux.trm(LINUX_setup): Make driver work with devfs.

2002-10-15  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* Makefile.in: Remove acconfig.h.

	* acconfig.h: File removed.

	* configure.in, stdfn.h: Change test for time_t in <time.h> to not
	require time_t define in config.h. This removes the need for acconfig.h.

	* term/metapost.trm: Add empty line in terminal documentation.
